GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

============================================================

PyKota NEWS :
       
    - 1.25alpha4 (2006-05-22) :
    
        - Now uses pkipplib if present to directly retrieve the job
          information from the CUPS server over IPP.
          
    - 1.25alpha3 (2006-05-11) :
    
        - Added a lock to ensure that a single cupspykota backend
          is processing datas for a particular print queue at any
          given time.
          
        - Now exports more environment variables for the subprocesses.
          
    - 1.25alpha2 (2006-05-03) :
    
        - Fixed some problems with DateTime objects.
        
        - Added support for PySNMP v4.x in addition to 3.4.x.
        
    - 1.25alpha1 (2006-04-14) :
    
        - Make the MySQL schema work with old releases of MySQL.
        
        - Fixed several character encoding problems.
          
        - Ensures that the denied banners counter is properly initialized
          with relationnal databases.
          
    - 1.24 (2006-04-08) :
    
        - Improved documentation and packaging stuff.
        
    - 1.24beta (2006-03-26) :
    
        - Finalized the pknotify command.
        
        - Updated the messages catalogs for translations.
        
    - 1.24alpha18 (2006-03-15) :
    
        - Now uses MIME encapsulation for email messages to avoid
          some problems with 8 bits messages being rejected.
          
    - 1.24alpha17 (2006-03-06) :
    
        - Fixed a major problem in the PostgreSQL backend.
        
        - pknotify can now check a remote user's name and password.
        
    - 1.24alpha16 (2006-03-02) :
    
        - Introduced the pknotify command line tool to dialog